fix resolutuion mobile

--- a/src/scss/config/default.scss
+++ b/src/scss/config/default.scss
@@ -4,6 +4,9 @@ html{-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size
 html {
   font-size: $siteResolution;
   scroll-behavior: smooth;
+  @media (max-width: $lg) {
+    font-size: $siteResolutionMobile;
+  }
 }
 
 html,
